// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ForecastTooltipComponent > should match the snapshot 1`] = `
<div>
  <div
    style="color: rgb(91, 99, 114); font-size: 13px; line-height: 18px; margin: 4px 6px;"
  >
    <div
      style="display: flex; margin-bottom: 5px;"
    >
      <div
        style="flex-shrink: 0;"
      >
        advanced.tooltip.forecast
      </div>
      <div
        style="margin-left: 5px; font-weight: 600; overflow: hidden; text-overflow: ellipsis; word-wrap: normal; word-break: keep-all; white-space: nowrap;"
      >
        Total Cost
      </div>
    </div>
    <div
      style="display: table;"
    >
      <div
        style="display: table-row-group;"
      >
        <div
          style="display: table-row; height: 18px;"
        >
          <div
            style="display: table-cell; overflow: hidden; text-overflow: ellipsis; word-wrap: normal; word-break: keep-all; white-space: nowrap;"
          >
            advanced.tooltip.forecastValue
          </div>
          <div
            style="display: table-cell; padding-left: 15px; font-weight: 600;"
          >
            <div>
              2.01M
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: table-row-group;"
      >
        <div
          style="display: table-row; height: 18px;"
        >
          <div
            style="display: table-cell; overflow: hidden; text-overflow: ellipsis; word-wrap: normal; word-break: keep-all; white-space: nowrap;"
          >
            advanced.tooltip.max
          </div>
          <div
            style="display: table-cell; padding-left: 15px; font-weight: 600;"
          >
            <div>
              3.01M
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: table-row-group;"
      >
        <div
          style="display: table-row; height: 18px;"
        >
          <div
            style="display: table-cell; overflow: hidden; text-overflow: ellipsis; word-wrap: normal; word-break: keep-all; white-space: nowrap;"
          >
            advanced.tooltip.min
          </div>
          <div
            style="display: table-cell; padding-left: 15px; font-weight: 600;"
          >
            <div>
              1.01M
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: table-row-group;"
      >
        <div
          style="display: table-row; height: 18px;"
        >
          <div
            style="display: table-cell; overflow: hidden; text-overflow: ellipsis; word-wrap: normal; word-break: keep-all; white-space: nowrap;"
          >
            advanced.tooltip.confidenceInterval
          </div>
          <div
            style="display: table-cell; padding-left: 15px; font-weight: 600;"
          >
            <div>
              80%
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="font-size: 10px; color: rgb(102, 102, 102); margin-top: 6px;"
    >
      <hr
        class="csdk-border-t"
        style="margin: 7px 0px;"
      />
    </div>
    2.01k
  </div>
</div>
`;

exports[`TrendTooltipComponent > should match the snapshot 1`] = `
<div>
  <div
    style="color: rgb(91, 99, 114); font-size: 13px; line-height: 18px; margin: 4px 6px;"
  >
    <div
      style="display: flex; margin-bottom: 5px;"
    >
      <div
        style="flex-shrink: 0;"
      >
        advanced.tooltip.trend
      </div>
      <div
        style="margin-left: 5px; font-weight: 600; overflow: hidden; text-overflow: ellipsis; word-wrap: normal; word-break: keep-all; white-space: nowrap;"
      >
        Total Cost
      </div>
    </div>
    <div
      style="display: table;"
    >
      <div
        style="display: table-row-group;"
      >
        <div
          style="display: table-row; height: 18px;"
        >
          <div
            style="display: table-cell; overflow: hidden; text-overflow: ellipsis; word-wrap: normal; word-break: keep-all; white-space: nowrap;"
          >
            advanced.tooltip.trendType
          </div>
          <div
            style="display: table-cell; padding-left: 15px; font-weight: 600;"
          >
            <div>
              Logarithmic Trend
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: table-row-group;"
      >
        <div
          style="display: table-row; height: 18px;"
        >
          <div
            style="display: table-cell; overflow: hidden; text-overflow: ellipsis; word-wrap: normal; word-break: keep-all; white-space: nowrap;"
          >
            advanced.tooltip.trendLocalValue
          </div>
          <div
            style="display: table-cell; padding-left: 15px; font-weight: 600;"
          >
            <div>
              2.01M
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: table-row-group;"
      >
        <div
          style="display: table-row; height: 18px;"
        >
          <div
            style="display: table-cell; overflow: hidden; text-overflow: ellipsis; word-wrap: normal; word-break: keep-all; white-space: nowrap;"
          >
            advanced.tooltip.trendDataKey
          </div>
          <div
            style="display: table-cell; padding-left: 15px; font-weight: 600;"
          >
            <div>
              advanced.tooltip.trendData.min 190.0K
            </div>
            <div>
              advanced.tooltip.trendData.max 4.84M
            </div>
            <div>
              advanced.tooltip.trendData.median 2.28M
            </div>
            <div>
              advanced.tooltip.trendData.average 2.15M
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="font-size: 10px; color: rgb(102, 102, 102); margin-top: 6px;"
    >
      <hr
        class="csdk-border-t"
        style="margin: 7px 0px;"
      />
    </div>
    2.01k
  </div>
</div>
`;
